update: safari touch issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* Safari touch optimization */
+    -webkit-tap-highlight-color: rgba(139, 92, 246, 0.1);
 }
 
 html {
@@ -46,6 +48,8 @@ body {
     -webkit-font-smoothing: antialiased;
     /* Better font rendering on Mac */
     -moz-osx-font-smoothing: grayscale;
+    /* Enable momentum scrolling on iOS */
+    -webkit-overflow-scrolling: touch;
 }
 
 /* Better defaults for media and inputs */
